feat: integrating operator work
